--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.39.0
-httpx==0.27.2
-beautifulsoup4==4.12.3
-pandas==2.2.2
-xlsxwriter==3.2.0
-tqdm==4.66.1
+streamlit
+pandas
+beautifulsoup4
+httpx
+xlsxwriter
